// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsSwitchGroup - Snapshots > matches snapshot with children 1`] = `
<div
  class="w-full p-6 bg-white/5 shadow-[0px_20px_40px_0px_rgba(5,5,10,0.50)] rounded-2xl flex-col justify-start items-start gap-6 inline-flex"
>
  <div>
    Child 1
  </div>
  <div>
    Child 2
  </div>
</div>
`;

exports[`SettingsSwitchGroup - Snapshots > matches snapshot with custom className 1`] = `
<div
  class="w-full p-6 bg-white/5 shadow-[0px_20px_40px_0px_rgba(5,5,10,0.50)] rounded-2xl flex-col justify-start items-start gap-6 inline-flex custom-group"
>
  <div>
    Content
  </div>
</div>
`;
